fixed CSS, list is now forced to bottom and scrolls, chat entry forced to bottom. //todo: auto scroll on overflow

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -37,6 +37,7 @@ button:hover {
 
 ul {
   padding: 0;
+  overflow: auto;
 }
 
 ul li {
@@ -45,12 +46,16 @@ ul li {
   border-top: 1px solid back;
   border-bottom: 1px solid black;
   padding-left: 20px;
+  box-sizing: border-box;
+  width: 100vw;
 }
 
 #container {
   display: flex;
   flex-direction: column;
   height: 100vh;
+  position: relative;
+  flex-direction: column-reverse;
 }
 
 #footer {
@@ -60,4 +65,12 @@ ul li {
   background-color: rgb(0, 153, 255);
   height: 60px;
   padding: 3px;
+  position: absolute;
+  bottom: 0px;
+}
+
+#chatbox {
+  margin-bottom: 60px;
+  overflow: auto;
+  display: flex;
 }
